Added heading text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <h1 class="heading-text center-text">Quiz Categories</h1>
     <main class="container">
         <section class="card card-with-overlay-text">
           <img class="card-overlay-img" src="/images/avengers-cover.jpg" alt="" />
