--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz category</title>
-    <link rel="stylesheet" href="https://garnish-ui.netlify.app/styles.css" />
-    <link rel="stylesheet" href="/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quiz category</title>
+  <link rel="stylesheet" href="https://garnish-ui.netlify.app/styles.css" />
+  <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
+  <header class="quiz-header flex">
+    <h1 class="heading-text">Douknw</h1>
+    <a class="nav-link" href="">Rules</a>
+  </header>
+  <hr>
   <h1 class="heading-text center-text">Quiz Categories</h1>
-    <main class="container">
-        <section class="card card-with-overlay-text">
-          <img class="card-overlay-img" src="/images/avengers-cover.jpg" alt="" />
-          <div class="overlay-text overlay-text1">Marvel Quiz</div>
-          <div class="overlay-text overlay-text2">Avengers</div>
-          <div class="card-overlay-textarea">
-            If you are a marvel fan, this quiz is for you. Take this quiz to test
-            your knowledge about Marvel.
-            <span class="highlighted-text">Whatever it takes!</span>
-            5 questions
-          </div>
-        </section>
-  
-        <section class="card card-with-overlay-text">
-          <img class="card-overlay-img" src="/images/gaming-cover.jpg" alt="" />
-          <div class="overlay-text overlay-text1">Gaming Quiz</div>
-          <div class="overlay-text overlay-text2">Gamer?</div>
-          <div class="card-overlay-textarea">
-            If you are a marvel fan, this quiz is for you. Take this quiz to test
-            your knowledge about Marvel.
-            <span class="highlighted-text">Whatever it takes!</span>
-            5 questions
-          </div>
-        </section>
-      </main>
-    
+  <main class="container">
+    <section class="card card-with-overlay-text">
+      <img class="card-overlay-img" src="/images/avengers-cover.jpg" alt="" />
+      <div class="overlay-text overlay-text1">Marvel Quiz</div>
+      <div class="overlay-text overlay-text2">Avengers</div>
+      <div class="card-overlay-textarea">
+        If you are a marvel fan, this quiz is for you. Take this quiz to test
+        your knowledge.
+        <span class="highlighted-text">Whatever it takes!</span>
+        5 questions
+      </div>
+      <div class="button-container">
+        <button class="cart-button play-btn">Take Quiz</button>
+      </div>
+    </section>
+
+    <section class="card card-with-overlay-text">
+      <img class="card-overlay-img" src="/images/gaming-cover.jpg" alt="" />
+      <div class="overlay-text overlay-text1">Gaming Quiz</div>
+      <div class="overlay-text overlay-text2">Gamer?</div>
+      <div class="card-overlay-textarea">
+        If you are a marvel fan, this quiz is for you. Take this quiz to test
+        your knowledge.
+        <span class="highlighted-text">Whatever it takes!</span>
+        5 questions
+      </div>
+      <div class="button-container">
+        <button class="cart-button play-btn">Take Quiz</button>
+      </div>
+    </section>
+  </main>
+
 </body>
+
 </html>
