--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
   <h1 class="heading-text center-text">Quiz Categories</h1>
   <main class="container">
     <section class="card card-with-overlay-text">
-      <img class="card-overlay-img" src="/images/avengers-cover.jpg" alt="" />
-      <div class="overlay-text overlay-text1">Marvel Quiz</div>
-      <div class="overlay-text overlay-text2">Avengers</div>
+      <img class="card-overlay-img" src="/images/gaming-cover.jpg" alt="" />
+      <div class="overlay-text overlay-text1">Gaming Quiz</div>
+      <div class="overlay-text overlay-text2">Gamer?</div>
       <div class="card-overlay-textarea">
         If you are a marvel fan, this quiz is for you. Take this quiz to test
-        your knowledge about Marvel.
+        your knowledge.
         <span class="highlighted-text">Whatever it takes!</span>
         5 questions
+      </div>
+      <div class="button-container">
+        <button class="cart-button play-btn">Take Quiz</button>
       </div>
     </section>
 
@@ -30,9 +33,12 @@
       <div class="overlay-text overlay-text2">Gamer?</div>
       <div class="card-overlay-textarea">
         If you are a marvel fan, this quiz is for you. Take this quiz to test
-        your knowledge about Marvel.
+        your knowledge.
         <span class="highlighted-text">Whatever it takes!</span>
         5 questions
+      </div>
+      <div class="button-container">
+        <button class="cart-button play-btn">Take Quiz</button>
       </div>
     </section>
   </main>
