Added Meta tags

--- a/Rules/rules.html
+++ b/Rules/rules.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="quiz-app">
+    <meta name="keywords" content="HTML, CSS, quiz-app">
+    <meta name="author" content="syed shaida hussain">
     <title>Rules</title>
     <link rel="stylesheet" href="https://garnish-ui.netlify.app/styles.css">
     <link rel="stylesheet" href="/Rules/rules.css">
