--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="quiz-header flex">
     <h1 class="heading-text">Douknw</h1>
-    <a class="nav-link" href="">Rules</a>
+    <a class="nav-link" href="/Rules/rules.html">Rules</a>
   </header>
   <hr>
   <h1 class="heading-text center-text">Quiz Categories</h1>
@@ -28,7 +28,7 @@
         5 questions
       </div>
       <div class="button-container">
-        <button class="cart-button play-btn">Take Quiz</button>
+        <a class="cart-button play-btn" href="/Question-styles/questions.html">Take Quiz</a>
       </div>
     </section>
 
@@ -37,13 +37,13 @@
       <div class="overlay-text overlay-text1">Gaming Quiz</div>
       <div class="overlay-text overlay-text2">Gamer?</div>
       <div class="card-overlay-textarea">
-        If you are a marvel fan, this quiz is for you. Take this quiz to test
+        If you are a gamer, this quiz is for you. Take this quiz to test
         your knowledge.
-        <span class="highlighted-text">Whatever it takes!</span>
+        <span class="highlighted-text">Born Gamer!</span>
         5 questions
       </div>
       <div class="button-container">
-        <button class="cart-button play-btn">Take Quiz</button>
+        <a class="cart-button play-btn" href="/Question-styles/questions.html">Take Quiz</a>
       </div>
     </section>
   </main>
