Added result page link

--- a/Question-styles/questions.html
+++ b/Question-styles/questions.html
@@ -78,6 +78,9 @@
         </div>
     </main>
 
+    <div class="result-link-container">
+        <a class="nav-link" href="/Result-page/result.html">Show Result</a>
+    </div>
 </body>
 
 </html>
